# aensh

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  FINAL_REPORT.md  INSTALL.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SUMMARY.md  VERIFICATION.md  aensh-manager  install.sh
docs/: CHANGELOG.md  DEVELOPMENT.md  EXAMPLES.md  EXTERNAL_COMMANDS.md  FAQ.md  INDEX.md  QUICK_START.md  README.md  STRUCTURE.md  USAGE.md  VISUAL_SUMMARY.md  architecture.md  commands.md  development.md  errors.md  overview.md  prompt-and-ui.md
src/: banner.rs  command.rs  errors.rs  input.rs  main.rs  prompt.rs
src/builtins/: mod.rs
src/builtins/filesystem/: cat.rs  cp.rs  find.rs  grep.rs  head.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs  tail.rs  touch.rs  tree.rs  wc.rs
src/builtins/navigation/: cd.rs  pwd.rs
src/builtins/shell/: alias.rs  exit.rs  help.rs  mod.rs  plugin.rs
src/builtins/system/: aetchy.rs  clear.rs  date.rs  echo.rs  env.rs  export.rs  history.rs  info.rs  mod.rs  stat.rs  type_cmd.rs  unset.rs  which.rs  whoami.rs
src/commands/: clear.rs  exit_cmd.rs  go.rs  help.rs  info.rs  list.rs  mod.rs  pwd.rs  show.rs
src/core/: aliases.rs  banner.rs  config.rs  errors.rs  external.rs  history.rs  input.rs  mod.rs  pipeline.rs  plugins.rs  prompt.rs  readline.rs  setup.rs
