[package]
name = "aensh"
version = "0.2.0"
edition = "2021"
authors = ["Gabriel"]
description = "A modern shell implementation in Rust"
license = "MIT"
repository = "https://github.com/gabriel/aensh"

[dependencies]
nix = { version = "0.27", features = ["fs", "signal"] }
libc = "0.2"
colored = "2.1"
gethostname = "0.4"
crossterm = "0.27"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
